glibc (2.3.1-14) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-cmov.dpatch: Fix hwcap condition code again,
      previous version does not work properly under some situation.
    - debian/sysdeps/depflags.pl: Fix libnss-db dependency from << 2.2-6 
      to <= 2.2-6.1.1, because the first version of libnss-db to work
      with libc6 2.3 is 2.2-6.1, and 2.2-6.2 works under all architectures
      correctly.  Suggested by Ryan Murray <rmurray@cyberhqz.com>.
      (Closes: #181834)

 -- GOTO Masanori <gotom@debian.or.jp>  Fri, 21 Feb 2003 09:19:45 +0900

glibc (2.3.1-13) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/postinst: Replace from "/usr/lib/file-rc" to
      "/usr/share/file-rc" to follow up file-rc 0.7.
      (Closes: #181551, #181556, #181606)
    - debian/libc/etc/init.d/devpts.sh: Fix devpts.sh failure if
      $devfs_mounted is empty. (Closes: #181541, #181591)

 -- GOTO Masanori <gotom@debian.or.jp>  Wed, 19 Feb 2003 09:26:17 +0900

glibc (2.3.1-12) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-malloc-check.dpatch: Fix hppa MALLOC_CHECK_
      invalid pointer problem.  (Closes: #177242)
    - debian/patches/libgcc-compat-sparc.dpatch: Fix sparc libgcc compat
      symbol problem.  Patched by Guido Guenther <agx@debian.org>
      (Closes: #178645)
    - debian/patches/locales-supported.dpatch: This dpatch addes many
      locales especially for UTF-8 and ISO-8859-15, to display debconf
      locale menu using SUPPORTED.orig.
      (Closes: #135334, #154556, #177472, #99623, #130517)
    - debian/packages.d/glibc-doc.mk: add pthread_{getspecific, key_delete,
      setspecific} manpage symlinks to pthread_key_create. (Closes: #99530)
    - debian/manpages/ldconfig.8: Update from the redhat manpages.
      (Closes: #180916)
    - debian/patches/libgcc-compat-all.dpatch: Fix i386 libgcc compat