@@ -2,12 +2,14 @@ glibc (2.3.1-14) unstable; urgency=low
 
   * GOTO Masanori <gotom@debian.or.jp>
     - debian/patches/glibc23-cmov.dpatch: Fix hwcap condition code again,
-      previous version does not work properly under some situation.
+      previous version did not work properly under some situation.
     - debian/sysdeps/depflags.pl: Fix libnss-db dependency from << 2.2-6 
       to <= 2.2-6.1.1, because the first version of libnss-db to work
       with libc6 2.3 is 2.2-6.1, and 2.2-6.2 works under all architectures
       correctly.  Suggested by Ryan Murray <rmurray@cyberhqz.com>.
       (Closes: #181834)
+    - debian/sysdeps/depflags.pl: Fix libc6.postinst breakage with file-rc
+      (<< 0.7.0), now libc6 conflicts them.  (Closes: #181683)
 
  -- GOTO Masanori <gotom@debian.or.jp>  Fri, 21 Feb 2003 09:19:45 +0900
 
